# solvitor-mcp

./: Cargo.toml  README.md
src/: main.rs
src/solvitor_mcp/: api.rs  mod.rs  requests.rs
