[package]
name = "solvitor-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Dyachenko"]
description = "An MCP server for Solvitor API. Solvitor is an AI-powered platform that helps developers extract IDL files from closed-source Solana smart contracts and decompile them."
license = "MIT"
documentation = "https://docs.rs/solvitor-mcp"
repository = "https://github.com/wowinter13/solvitor-mcp"
homepage = "https://github.com/wowinter13/solvitor-mcp"
readme = "README.md"
keywords = ["solana", "api", "mcp", "solvitor", "blockchain"]
categories = ["api-bindings", "web-programming"]

[dependencies]
anyhow = "1.0"
rmcp = { version = "0.1.5", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
